@@ -1,3 +1,12 @@
+(16/03/15)
+==========
+
+· ODROID: Games > Quake 2
+
+· RPi: Updated Games > Quake 2
+
+· Updated Tweaks > Others
+
 (14/03/15)
 ==========
 
